fixes double border bottom issue in view

--- a/sm_build/less/degree-finder/main.less
+++ b/sm_build/less/degree-finder/main.less
@@ -117,7 +117,7 @@ input[type='checkbox']:checked {
 	// .center;
 
 }
-#program_count section p{
+.total{
 	font-size: 3em;
 	@h : 0px;
 	@v : 0.15em;
@@ -126,16 +126,17 @@ input[type='checkbox']:checked {
 
 	// text shadow syntax
 	// text-shadow: H-offset V-offset blur color
-	-webkit-box-shadow: @h @v @b @c;
-	-moz-box-shadow: @h @v @b @c;
-	box-shadow: @h @v @b @c;
-	// text-shadow: 0px 7.5px 5px rgba(0,0,0,0.3);
+	// -webkit-box-shadow: @h @v @b;
+	// -moz-box-shadow: @h @v @b;
+	// box-shadow: @h @v @b;
+	text-shadow: 0px 7.5px 5px rgba(0,0,0,0.3);
+	border-bottom: @v solid @c;
 	// .textGlow;
 }
 
 #program_count section p:nth-child(2){
 	font-size: 1.25em;
-	// text-shadow: 0px 7.5px 5px rgba(0,0,0,0.3);
+	text-shadow: 0px 7.5px 5px rgba(0,0,0,0.3);
 }
 
 /*
